device-scanner/mount-emitter/src/snapshots/tests__line_to_hashmap_swap.snap
---
created: "2019-08-25T21:49:38.325105Z"
creator: insta@0.10.1
source: mount-emitter/src/lib.rs
expression: map_to_sorted_vec(line_to_hashmap(line))
---
[
    (
        "FSTYPE",
        "swap",
    ),
    (
        "OPTIONS",
        "defaults",
    ),
    (
        "SOURCE",
        "/dev/mapper/centos-swap",
    ),
    (
        "TARGET",
        "swap",
    ),
]
