device-scanner/mount-emitter/src/snapshots/tests__list_mount.snap
---
created: "2019-08-25T21:49:38.325117Z"
creator: insta@0.10.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
AddMount(
    MountPoint(
        "/mnt/part1",
    ),
    DevicePath(
        "/dev/sde1",
    ),
    FsType(
        "ext4",
    ),
    MountOpts(
        "rw,relatime,data=ordered",
    ),
)
