device-scanner/mount-emitter/src/snapshots/tests__poll_move.snap
---
created: "2019-08-25T21:49:38.325210Z"
creator: insta@0.10.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
MoveMount(
    MountPoint(
        "/mnt/part1a",
    ),
    DevicePath(
        "/dev/sde1",
    ),
    FsType(
        "ext4",
    ),
    MountOpts(
        "rw,relatime,data=ordered",
    ),
    MountPoint(
        "/mnt/part1",
    ),
)
