device-scanner/mount-emitter/src/snapshots/tests__poll_remount.snap
---
created: "2019-08-25T21:49:38.325199Z"
creator: insta@0.10.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
ReplaceMount(
    MountPoint(
        "/mnt/part1",
    ),
    DevicePath(
        "/dev/sde1",
    ),
    FsType(
        "ext4",
    ),
    MountOpts(
        "ro,relatime,data=ordered",
    ),
    MountOpts(
        "rw,data=ordered",
    ),
)
