device-scanner/mount-emitter/src/snapshots/tests__poll_umount.snap
---
created: "2019-08-25T21:49:38.325248Z"
creator: insta@0.10.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
RemoveMount(
    MountPoint(
        "/testPool4",
    ),
    DevicePath(
        "testPool4",
    ),
    FsType(
        "zfs",
    ),
    MountOpts(
        "rw,xattr,noacl",
    ),
)
