device-scanner/mount-emitter/src/snapshots/tests__swap.snap
---
created: "2019-08-25T21:49:38.325198Z"
creator: insta@0.10.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
AddMount(
    MountPoint(
        "swap",
    ),
    DevicePath(
        "/dev/mapper/centos-swap",
    ),
    FsType(
        "swap",
    ),
    MountOpts(
        "defaults",
    ),
)
