device-scanner/mount-emitter/src/snapshots/tests__swap_extra.snap
---
created: "2019-08-25T21:49:38.353462Z"
creator: insta@0.10.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
AddMount(
    MountPoint(
        "swap",
    ),
    DevicePath(
        "/dev/mapper/VolGroup00-LogVol01",
    ),
    FsType(
        "swap",
    ),
    MountOpts(
        "defaults",
    ),
)
